# reco

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  .valalintignore  CONTRIBUTING.md  README.md  RELEASE_HOWTO.md  SECURITY.md  com.github.ryonakano.reco.yml  index.html  meson.build  meson_options.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  flatpak-x-checker.yml  gettext.yml  main.yml  merge.yml  release.yml
build-aux/: 0001-meson-Disable-styles.patch  com.github.ryonakano.reco.yml
build-aux/appcenter/: com.github.ryonakano.reco.Devel.yml
build-aux/flathub/: com.github.ryonakano.reco.Devel.yml
com.github.ryonakano.reco/: Application.Application.html  Application.activate.html  Application.html  Application.main.html  Application.settings.html  Application.startup.html  Config.APP_ID.html  Config.APP_NAME.html  Config.APP_VERSION.html  Config.GETTEXT_PACKAGE.html  Config.LOCALEDIR.html  Config.RESOURCE_PREFIX.html  Config.html  Define.APP_NAME.html  Define.ChannelID.MONO.html  Define.ChannelID.STEREO.html  Define.ChannelID.html  Define.ColorScheme.DEFAULT.html  Define.ColorScheme.FORCE_DARK.html  Define.ColorScheme.FORCE_LIGHT.html  Define.ColorScheme.html  Define.ErrorDialogResponseID.CLOSE.html  Define.ErrorDialogResponseID.html  Define.FileAttribute.HOST_PATH.html  Define.FileAttribute.html  Define.FormatID.ALAC.html  Define.FormatID.FLAC.html  Define.FormatID.MP3.html  Define.FormatID.OGG.html  Define.FormatID.OPUS.html  Define.FormatID.WAV.html  Define.FormatID.get_suffix.html  Define.FormatID.html  Define.RecordError.CONFIGURE_ERROR.html  Define.RecordError.CREATE_ERROR.html  Define.RecordError.html  Define.SourceID.BOTH.html  Define.SourceID.MIC.html  Define.SourceID.SYSTEM.html  Define.SourceID.html  (+189 more)
data/: Application.css  Extra.css  com.github.ryonakano.reco.appdata.xml  com.github.ryonakano.reco.appdata.xml.in  com.github.ryonakano.reco.desktop  com.github.ryonakano.reco.desktop.in  com.github.ryonakano.reco.gschema.xml  meson.build  reco.appdata.xml.in  reco.desktop.in  reco.desktop.in.in  reco.gresource.xml  reco.gresource.xml.in  reco.gschema.xml  reco.gschema.xml.in  reco.metainfo.xml.in  reco.metainfo.xml.in.in
data/ui/: help-overlay.blp  shortcuts-dialog.blp
debian/: changelog  control  copyright
docs/: meson.build
docs/images/: record_manager_state.drawio  release_flow.drawio
docs/images/Manager/RecordManager/: pipeline.drawio
docs/images/Model/Recorder/: format_specific_elements.drawio  state.drawio
elementary/: com.github.ryonakano.reco.yml
lib/: g_date_util.c  g_date_util.h  meson.build
meson/: post_install.py
patches/: 0001-level-use-GArray-instead-of-deprecated-GValueArray.patch
po/: LINGUAS  POTFILES  README.md  ca.po  com.github.ryonakano.reco.pot  cs.po  de.po  es.po  et.po  fa.po  fi.po  fr.po  hi.po  hr.po  hu.po  it.po  ja.po  lt.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  ta.po  tr.po  uk.po  zh_CN.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  hu.po  it.po  ja.po  lt.po  meson.build  nb_NO.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  tr.po  uk.po
src/: Application.vala  Config.vala.in  Define.vala  MainWindow.vala  StyleSwitcher.vala  Util.vala  meson.build
src/Dialogs/: DestructionWarnginDialog.vala
src/Manager/: DeviceManager.vala  MigrationManager.vala  RecordManager.vala  StyleManager.vala
src/Model/: Recorder.vala
src/Model/Recorder/: ALACRecorder.vala  AbstractRecorder.vala  FLACRecorder.vala  MP3Recorder.vala  OGGRecorder.vala  OPUSRecorder.vala  WAVRecorder.vala
src/Model/Timer/: AbstractTimer.vala  CountDownTimer.vala  CountUpTimer.vala
src/Services/: AbstractTimer.vala  CountDownTimer.vala  CountUpTimer.vala  Device.vala  DeviceManager.vala  PulseAudioManager.vala  Recorder.vala  Timer.vala
src/Util/: Convert.vala  DateTimeUtil.vala  FileUtil.vala
src/View/: AbstractView.vala  CountDownView.vala  RecordView.vala  WelcomeView.vala
src/Views/: AbstractView.vala  CountDownView.vala  RecordView.vala  WelcomeView.vala
src/Widget/: ControlBar.vala  FolderChooserButton.vala  LevelBar.vala  ProcessingDialog.vala  SavingDialog.vala  Waveform.vala
src/Widgets/: LevelBar.vala
subprojects/: blueprint-compiler.wrap  live-chart.wrap  ryokucha.wrap
vapi/: g-date-util.vapi  libpulse-ext.vapi
